syntax = "proto3";

package user;

option go_package = ".;proto";

message GetShippingRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ShippingOrderResponse {
  string shippingId = 1;
  string userId = 2;
  string orderId = 3;
}

message ShippingOrders {
  repeated ShippingOrderResponse shippingOrders = 1;
}

service Shipping {
  rpc GetShippingOrders (GetShippingRequest) returns (ShippingOrders) {}
}